[package]
name = "tdb"
version = "0.1.0"
authors = ["zhangguyu <zhangguyu6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.17"
lazy_static = "1.3.0"
arrayvec = "0.4.11"
parking_lot = "0.9"